# devanagari

./: .ghci  .hgignore  .hgtags  HISTORY  Main.hs  TODO.txt  cabal.sandbox.config  devanagari.cabal  run-haddock.sh
Text/: Velthuis.hs
Text/Devanagari/: Exception.hs  Phonemic.hs  Segments.hs  Tests.hs  Translit.hs  Unicode.hs  Unicode.hs.orig  UnicodeTests.hs  Velthuis.hs  VelthuisTests.hs
docs/: tests.tex
exe/: Main.hs
lib/Text/Devanagari/: Exception.hs  Segments.hs  Unicode.hs  Velthuis.hs
test/: RunTests.hs  Tests.hs
