Name:           devanagari
Version:        0.1
Cabal-Version:  >= 1.14
Author:         Richard Cobbe
Synopsis:       Defines multiple representations of Devanagari text and conversions between them
Build-Type:     Simple
Extra-Source-Files: HISTORY
License:        AllRightsReserved
Copyright:      (c) 2011 Richard Cobbe
Maintainer:     cobbe@ccs.neu.edu
Stability:      alpha
Category:       Data
Description:    This package provides a library that exports multiple representations of Devanagari text (internal, Unicode, modified Velthuis) and converts back and converts back and forth between them.  The package also includes a binary that performs the conversion for use with other languages.

Executable devanagari
  Default-Language: Haskell2010
  hs-source-dirs: exe
  Main-is: Main.hs
  Ghc-options: -fwarn-incomplete-patterns -fwarn-unrecognised-pragmas
  Build-Depends:
    base == 4.8.*,
    mtl == 2.2.*,
    rcc-exceptional == 0.5.*,
    devanagari
                
Library
  hs-source-dirs: lib
  default-language: Haskell2010
  Ghc-options: -fwarn-incomplete-patterns -fwarn-unrecognised-pragmas
  Build-Depends:
    base == 4.8.*,
    mtl == 2.2.*,
    parsec == 3.1.*,
    containers == 0.5.*,
    rcc-exceptional == 0.5.*
  Exposed-Modules:
    Text.Devanagari.Exception,
    Text.Devanagari.Segments,
    Text.Devanagari.Unicode,
    Text.Devanagari.Velthuis

Test-Suite devanagari-tests
  main-is: RunTests.hs
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  Ghc-options: -fwarn-incomplete-patterns -fwarn-unrecognised-pragmas
  build-depends:
    devanagari,
    rcc-exceptional == 0.5.*,
    base == 4.8.*,
    HUnit == 1.3.*

-- Executable devtrans
--   Main-Is:          Main.hs
--   Build-Depends:    base >= 4 && < 5, utf8-string >= 0.3.7
--   Other-Modules:    Text.Devanagari.Exception, Text.Devanagari.Segments, Text.Devanagari.Unicode, Text.Devanagari.Velthuis
