-- Copyright 2012-2017 Richard Cobbe
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--   http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

Name:           devanagari
Version:        0.2
Cabal-Version:  >= 1.14
Author:         Richard Cobbe
Synopsis:       Defines multiple representations of Devanagari text and conversions between them
Build-Type:     Simple
Extra-Source-Files: HISTORY
License:        Apache-2.0
License-File:   LICENSE
Copyright:      (c) 2011 Richard Cobbe
Maintainer:     cobbe@ccs.neu.edu
Stability:      alpha
Category:       Data
Description:    This package provides a library that exports multiple representations of Devanagari text (internal, Unicode, modified Velthuis) and converts back and converts back and forth between them.  The package also includes a binary that performs the conversion for use with other languages.

Executable devanagari
  Default-Language: Haskell2010
  hs-source-dirs: exe
  Main-is: Main.hs
  Ghc-options: -fwarn-incomplete-patterns -fwarn-unrecognised-pragmas
  Build-Depends:
    base == 4.8.*,
    transformers == 0.4.*,
    devanagari
                
Library
  hs-source-dirs: lib
  default-language: Haskell2010
  Ghc-options: -fwarn-incomplete-patterns -fwarn-unrecognised-pragmas
  Build-Depends:
    base == 4.8.*,
    parsec == 3.1.*,
    containers == 0.5.*,
    transformers == 0.4.*
  Exposed-Modules:
    Text.Devanagari.Exception,
    Text.Devanagari.Segments,
    Text.Devanagari.Unicode,
    Text.Devanagari.Velthuis

Test-Suite devanagari-tests
  main-is: RunTests.hs
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  Ghc-options: -fwarn-incomplete-patterns -fwarn-unrecognised-pragmas
  build-depends:
    devanagari,
    base == 4.8.*,
    HUnit == 1.6.*,
    test-utils == 1.6.*,
    transformers == 0.4.*

-- Executable devtrans
--   Main-Is:          Main.hs
--   Build-Depends:    base >= 4 && < 5, utf8-string >= 0.3.7
--   Other-Modules:    Text.Devanagari.Exception, Text.Devanagari.Segments, Text.Devanagari.Unicode, Text.Devanagari.Velthuis
